# cpp-tetris

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
include/: game.h  gamelogic.h  gui.h  model.h  observer.h  textui.h  utils.h
src/: CMakeLists.txt  game.cpp  gamelogic.cpp  gui.cpp  main.cpp  model.cpp  textui.cpp
tst/: CMakeLists.txt  gamelogictest.cpp  gametest.cpp
