set(BINARY ${CMAKE_PROJECT_NAME})
set(SOURCES main.cpp ../include/model.h model.cpp "game.cpp" "../include/game.h" "textui.cpp")
if(WIN32)
    set(SDL2_DIR ../lib/SDL2-2.0.14)
    find_package(SDL2 REQUIRED)
    include_directories(${SDL2_INCLUDE_DIRS})
    file(COPY ${SDL2_DIR}/lib/x64/SDL2.dll
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif(WIN32)
find_file(SDL2_INCLUDE_DIR NAME SDL.h HINTS SDL2)
find_library(SDL2_LIBRARY NAME SDL2)
add_executable(${BINARY}_run ${SOURCES})
add_library(${BINARY}_lib STATIC ${SOURCES})
target_include_directories(${BINARY}_run PUBLIC ${SDL2_INCLUDE_DIRS})
target_link_libraries(${BINARY}_run ${SDL2_LIBRARIES})
