set(BINARY ${CMAKE_PROJECT_NAME})
set(SOURCES main.cpp ../include/model.h model.cpp "game.cpp" "../include/game.h" "textui.cpp")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
find_package(SDL2TFF REQUIRED)
add_executable(${BINARY}_run ${SOURCES})
add_library(${BINARY}_lib STATIC ${SOURCES})
target_include_directories(${BINARY}_run PUBLIC ${SDL2_INCLUDE_DIRS})
target_link_libraries(${BINARY}_run ${SDL2_LIBRARIES})
